--- a/dbt/sample-profiles.yml
+++ b/dbt/sample-profiles.yml
@@ -1,3 +1,4 @@
+
 boardgame_project: # name of the profile described on dbt_project.yml
   outputs:
     dev:
@@ -5,9 +6,8 @@ boardgame_project: # name of the profile described on dbt_project.yml
       database: BOARDGAME
       password: dbtPassword123
       role: transform
-      schema: [your-schema] # dbt_[first-initial-last-name] (ex: dbt_fbalseiro)
+      schema: raw # dbt_[first-initial-last-name] (ex: dbt_fbalseiro)
       threads: 4
       type: snowflake
       user: dbt
       warehouse: DBT_CERTIFICATION_PROJECT_WH
-  target: dev
