--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -31,3 +31,15 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 
+# dbt_project.yml
+
+models:
+  dbt_capstone_project:
+    staging:
+      +materialized: view
+
+seeds:
+  dbt_certification_project:
+    +column_types:
+      country_name: varchar(100)
+      country_code: varchar(3)
