--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -9,6 +9,15 @@ config-version: 2
 # This setting configures which "profile" dbt uses for this project.
 profile: 'boardgame_project'
 
+# Define variables here
+vars:
+  the_distant_future: '9999-12-31'
+  unknown: 'Unknown'
+  number_unknown: -1
+  min_accepted_num: 1
+  boardgame_type: 'boardgame'
+
+
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
@@ -30,16 +39,16 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
-
-# dbt_project.yml
-
 models:
-  dbt_capstone_project:
+  dbt_certification_project:
     staging:
       +materialized: view
+    intermediate:
+      +materialized: ephemeral
 
 seeds:
   dbt_certification_project:
+    +schema: seeds
     +column_types:
       country_name: varchar(100)
       country_code: varchar(3)
