--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -17,7 +17,6 @@ vars:
   min_accepted_num: 1
   boardgame_type: 'boardgame'
 
-
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
@@ -32,23 +31,25 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
-  dbt_certification_project:
+  dbt_capstone_project:
     staging:
       +materialized: view
+      +tags: 
+        - staging
+        - static
     intermediate:
       +materialized: ephemeral
+      +tags: 
+        - intermediate
 
 seeds:
-  dbt_certification_project:
+  dbt_capstone_project:
     +schema: seeds
     +column_types:
       country_name: varchar(100)
       country_code: varchar(3)
+    +tags: 
+      - seed
