--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -9,8 +9,13 @@ config-version: 2
 # This setting configures which "profile" dbt uses for this project.
 profile: 'boardgame_project'
 
+# Define variables here
 vars:
   the_distant_future: '9999-12-31'
+  unknown: 'Unknown'
+  number_unknown: -1
+  min_accepted_num: 1
+  boardgame_type: 'boardgame'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -27,14 +32,22 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
 
 
+# Configuring models
+# Full documentation: https://docs.getdbt.com/docs/configuring-models
 
-# dbt_project.yml
+# In this example config, we tell dbt to build all models in the example/
+# directory as views. These settings can be overridden in the individual model
+# files using the `{{ config(...) }}` macro.
+models:
+  dbt_certification_project:
+    staging:
+      +materialized: view
+    intermediate:
+      +materialized: ephemeral
 
 seeds:
-  dbt_capstone_project:
-      +schema: seeds
-      +column_types:
-        country_name: varchar(100)
-        country_code: varchar(3)
-
-
+  dbt_certification_project:
+    +schema: seeds
+    +column_types:
+      country_name: varchar(100)
+      country_code: varchar(3)
