--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -8,6 +8,10 @@ config-version: 2
 
 vars:
   the_distant_future: '9999-12-31'
+  unknown: 'Unknown'
+  number_unknown: -1
+  min_accepted_num: 1
+  boardgame_type: 'boardgame'
 
 # This setting configures which "profile" dbt uses for this project.
 profile: 'boardgame_project'
@@ -33,6 +37,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
+models:
+  dbt_certification_project:
+    staging:
+      +materialized: view
+    intermediate:
+      +materialized: ephemeral
+
 seeds:
   dbt_certification_project:
     +schema: seeds
