--- a/dbt/models/staging/_boardgames__models.yml
+++ b/dbt/models/staging/_boardgames__models.yml
@@ -1,29 +1,39 @@
 version: 2
 
 models:
-      - name: stg_boardgames_artists
-      - name: stg_boardgames_boardgames
-        columns:
-          - name: boardgame_avg_rating
-            tests:
-              - accepted_values_between_1_10
-      - name: stg_boardgames_categories
-      - name: stg_boardgames_designers
-      - name: stg_boardgames_mechanics
-      - name: stg_boardgames_publishers
-      - name: stg_boardgames_rankings
-        columns:
-          - name: boardgame_avg_rating
-            tests:
-              - accepted_values_between_1_10
-          - name: boardgame_bayes_avg_rating
-            tests:
-              - accepted_values_between_1_10
-      - name: stg_boardgames_reviews
-        columns:
-          - name: review_rating
-            tests:
-              - accepted_values_between_1_10
-      - name: stg_boardgames_users
-      - name: stg_country_codes
-      - name: stg_country_codes_users_ref
+  - name: stg_boardgames_artists
+  - name: stg_boardgames_boardgames
+    columns:
+      - name: boardgame_avg_rating
+        tests:
+          - accepted_values_between_1_10:
+              name: accepted_values_boardgame_avg_rating
+              config:
+                severity: warn
+                warn_if: ">1000"
+  - name: stg_boardgames_categories
+  - name: stg_boardgames_designers
+  - name: stg_boardgames_mechanics
+  - name: stg_boardgames_publishers
+  - name: stg_boardgames_rankings
+    columns:
+      - name: boardgame_avg_rating
+        tests:
+          - accepted_values_between_1_10:
+              name: accepted_values_boardgame_rankings_avg_rating
+      - name: boardgame_bayes_avg_rating
+        tests:
+          - accepted_values_between_1_10:
+              name: accepted_values_boardgame_bayes_avg_rating
+  - name: stg_boardgames_reviews
+    columns:
+      - name: review_rating
+        tests:
+          - accepted_values_between_1_10:
+              config:
+                severity: error
+                error_if: ">100"
+                warn_if: ">10"
+  - name: stg_boardgames_users
+  - name: stg_country_codes
+  - name: stg_country_codes_users_ref
