added macros and csv files

--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -9,6 +9,9 @@ config-version: 2
 # This setting configures which "profile" dbt uses for this project.
 profile: 'boardgame_project'
 
+vars:
+  the_distant_future: '9999-12-31'
+
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
@@ -23,11 +26,14 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+models:
+  dbt_capstone_project:
+    staging:
+      +materialized: view
 
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
 
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
-
+seeds:
+  dbt_capstone_project:
+      +column_types:
+        country_name: varchar(100)
+        country_code: varchar(3)
