--- a/dbt/sample-profiles.yml
+++ b/dbt/sample-profiles.yml
@@ -5,7 +5,7 @@ boardgame_project: # name of the profile described on dbt_project.yml
       database: BOARDGAME
       password: dbtPassword123
       role: transform
-      schema: [your-schema] # dbt_[first-initial-last-name] (ex: dbt_fbalseiro)
+      schema: DBT_DPATHAK 
       threads: 4
       type: snowflake
       user: dbt
