--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -30,10 +30,13 @@ models:
   dbt_capstone_project:
     staging:
       +materialized: view
+    intermediate:
+      +materialized: ephemeral
 
 
 seeds:
   dbt_capstone_project:
+      +schema: seeds
       +column_types:
         country_name: varchar(100)
         country_code: varchar(3)
