--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -42,8 +42,17 @@ models:
   dbt_certification_project:
     staging:
       +materialized: view
+      +tags: 
+        - staging
+        - static
     intermediate:
       +materialized: ephemeral
+      +tags: 
+        - intermediate
+    marts:
+      +materialized: table
+      +tags:
+        - marts
 
 seeds:
   dbt_certification_project:
@@ -51,3 +60,5 @@ seeds:
     +column_types:
       country_name: varchar(100)
       country_code: varchar(3)
+    +tags: 
+      - seed
