--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -37,8 +37,22 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
+on-run-start: 
+  - "{{ audit_prep() }}"
+  - "{{ audit_log('run_start') }}"
+on-run-end: 
+  - "{{ audit_log('run_end') }}"
+
+# Configuring models
+# Full documentation: https://docs.getdbt.com/docs/configuring-models
 models:
   dbt_certification_project:
+    +pre-hook: 
+      - "{{ log('THIS IS A PRE-HOOK') }}"
+      - "{{ audit_log('model_start') }}"
+    +post-hook: 
+      - "{{ log('THIS IS A POST-HOOK') }}"
+      - "{{ audit_log('model_end') }}"
     staging:
       +materialized: view
       +tags: 
